--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,42 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App button {
+  width: 200px;
+  margin-top: 10px;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.users {
+  display: flex;
+  flex-wrap: wrap;
+ 
+  margin-top: 10px;
+  position: relative;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.user {
+  width: 250px;
+  align-items: stretch;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: solid 1px grey;
+  margin: 2px;
 }
 
-.App-link {
-  color: #61dafb;
+.user p {
+  margin: 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.yes {
+  color: green;
+  text-emphasis: strong;
+}
+.no {
+  color: red;
+}
+.userProjects {
+  background-color: lightgrey;
+  flex: 1;
+  border-top: solid 1px grey;
+  height: auto;
 }
